[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu/options_menu/options-menu.gd" type="Script" id=1]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -955.5
margin_top = -535.5
margin_right = 955.5
margin_bottom = 535.5
color = Color( 0.137255, 0.101961, 0.101961, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -79.5
margin_right = 115.0
margin_bottom = 79.5

[node name="Pause" type="VBoxContainer" parent="ColorRect/VBoxContainer"]
margin_right = 230.0
margin_bottom = 68.0
alignment = 1

[node name="CheckButton" type="CheckButton" parent="ColorRect/VBoxContainer/Pause"]
margin_right = 230.0
margin_bottom = 40.0
focus_mode = 0
enabled_focus_mode = 0
text = "Pause on completion"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer/Pause"]
margin_top = 44.0
margin_right = 230.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/Pause/HBoxContainer"]
margin_top = 5.0
margin_right = 152.0
margin_bottom = 19.0
text = "Number of completions"

[node name="CompletionsNumber" type="SpinBox" parent="ColorRect/VBoxContainer/Pause/HBoxContainer"]
margin_left = 156.0
margin_right = 230.0
margin_bottom = 24.0
min_value = 1.0
max_value = 5000.0
value = 1.0
align = 1
editable = false

[node name="HSeparator" type="HSeparator" parent="ColorRect/VBoxContainer"]
margin_top = 72.0
margin_right = 230.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 40 )

[node name="Return" type="Button" parent="ColorRect/VBoxContainer"]
margin_top = 116.0
margin_right = 230.0
margin_bottom = 136.0
text = "Return to main menu"

[connection signal="toggled" from="ColorRect/VBoxContainer/Pause/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/Pause/HBoxContainer/CompletionsNumber" to="." method="_on_CompletionsNumber_value_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Return" to="." method="_on_Return_pressed"]
